@@ -94,5 +94,5 @@ Variant: Also available are
  \fun{GEN}{minim}{GEN x, GEN b = NULL, GEN m = NULL} ($\fl=0$),
  \fun{GEN}{minim2}{GEN x, GEN b = NULL, GEN m = NULL} ($\fl=1$).
  \fun{GEN}{minim_raw}{GEN x, GEN b = NULL, GEN m = NULL} (do not perform LLL
- reduction on x).
+ reduction on x and return \kbd{NULL} on accuracy error).
 
