@@ -2,4 +2,5 @@
 1
 78
 77
-Total time spent: 0
+136
+Total time spent: 62
